# BigEula

./: .gitignore  CMakeLists.txt  a.sh  log.txt
code/: config.cpp  config.h  log.cpp  log.h  singleton.h  util.cpp  util.h
test/: test_config.cpp  test_log.cpp
